GitHub links and style tweaks

--- a/index.html
+++ b/index.html
@@ -108,32 +108,35 @@
   <main id="resume">
     <div class="content">
       <h1>Resumé</h1>
-      <h3>Creative Technology, Physical Computing, and Installation Art</h3>
+      <p><i><b>Creative Technology, Physical Computing, and Installation Art</b></i></p>
 
       <h2>Education</h2>
       <p>
-        <strong>Parsons School of Design</strong> New York, NY
+        <a href="http://www.newschool.edu/parsons/">Parsons School of Design</a> New York, NY
         <br>
-        BFA in <u>Design and Technology</u>
+        BFA in <b>Design and Technology</b>
         <br>
         Class of May 2018
       </p>
       <p>
-        <strong>New School Eugene Lang</strong> New York, NY
+        <a href="http://www.newschool.edu/lang/ ">Eugene Lang</a> New York, NY
         <br>
-        BFA in <u>Philospohy and Media Studies</u>
+        BFA in <b>Philosophy and Anthropology</b>
         <br>
         Class of May 2019
       </p>
       <p>
-        <strong>Oxford Academy</strong> Westbrook, CT
+        <a href="http://www.oxfordacademy.net/">Oxford Academy</a> Westbrook, CT
         <br>
         High School, 2012 - 2014
       </p>
-      <h2>Expereince</h2>
-      <strong>Parsons School of Design</strong> New York, NY
-      <br>
-      <u>Peer Mentor</u> March 2016 - currently
+      <h2>Experience</h2>
+      <p>
+        <strong>Parsons School of Design</strong>. New York, NY.
+        <br>
+        <em>Peer Mentor</em>, March 2016 - present
+      </p>
+
       <h2>Skills</h2>
       <ul>
         <li>Creative Coding (Processing, Open Frameworks, GLSL, etc.) </li>
@@ -157,13 +160,13 @@
         <li>Yoga</li>
       </ul>
       <h2>Languages</h2>
-      Human
+      <h3>Human Languages</h3>
       <ul>
         <li>English (fluent)</li>
         <li>Russian (fluent)</li>
         <li>Italian (advanced/fluent)</li>
       </ul>
-      Computer
+      <h3>Computer Languages</h3>
       <ul>
         <li>C++ (Processing, openFrameworks, Arduino)</li>
         <li>JavaScript, HTML5, and CSS3</li>
