--- a/pages/endevour.html
+++ b/pages/endevour.html
@@ -6,6 +6,8 @@
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/tzNWS7Lbi3c" frameborder="0" allowfullscreen></iframe>
 
+<p> <a href="https://github.com/mbrav/EndeavoursGuide"> Endeavour's Guide on GitHub</a></p>
+
 <h2>Statement</h2>
 
 <p>The intention behind this project is to revive James Cook’s geographic discoveries that where made while he was the captain of the <em>Endeavour</em> ship. The device is capable of displaying the direction it is directed through 4 different modes and displays its functionality on three 7 segment displays.</p>
