--- a/pages/personality-box.html
+++ b/pages/personality-box.html
@@ -6,6 +6,8 @@
 
 <iframe src="https://player.vimeo.com/video/173251207?color=9CBEF2"  frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
+<p> <a href="https://gist.github.com/mbrav/eb513093316393b7623b"> Artificial Personality Box on GitHub</a></p>
+
 <h2>Statement</h2>
 
 <p>The theme that <em>Artificial Personality Box</em> explores, observes, and even critiques is the human ambition to incorporate personalities in objects. We humans have had an urge to incorporate human-like characteristics into objects for as long as we existed. However, this is not just a characteristic of the modern human being. We leave signs of this determination starting with Ancient Egyptian stuffed dolls, to virtual avatars in video games. With the advances of technology, the human ambition to incorporate personalities into objects does not seem to slow down.</p>
