--- a/pages/emotion-cube.html
+++ b/pages/emotion-cube.html
@@ -6,6 +6,8 @@
 
 <iframe src="https://player.vimeo.com/video/144803164?color=9CBEF2"  frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
+<p> <a href="https://gist.github.com/mbrav/875aec5f8ded109240a5f900c5b3f0cb"> Emotion Cube on GitHub</a></p>
+
 <h2>Statement</h2>
 
 <p><em>Emotion Cube</em> is a small wooden enclosure that senses physical movements, touches, changes in light intensity, and temperature. Depending on the level of these changes and interactions, the cube expresses varying light patterns, colors, and vibrations. If left alone for some time, the cube will express a light pattern that signifies its loneliness. Whenever one interacts with it, the cube comes to life by responding with a blinking and vibrating pattern.</p>
