--- a/pages/inform.html
+++ b/pages/inform.html
@@ -4,10 +4,6 @@
 
 <h3>March 2015</h3>
 
-<p> <a href="https://github.com/mbrav/infORM/blob/master/ProjectIntent.pdf">PDF</a></p>
-
-<h2>Statement</h2>
-
 <p>This project is an attempt to explore certain fields in
 technology that remain uninfluenced in non-technical
 applications. One of these technologies that would defend
@@ -21,3 +17,6 @@ which its data relations are drawn. The relation between
 data will be created with the help of a physical computing
 device that will gather data from the physical environment
 and visualize it using a technology based medium.</p>
+
+<p> <a href="https://github.com/mbrav/infORM/raw/master/ProjectIntent.pdf"> Research Paper (PDF)</a></p>
+<p> <a href="https://github.com/mbrav/infORM">infORM on GitHub</a></p>
