--- a/pages/multiverse-clockwork.html
+++ b/pages/multiverse-clockwork.html
@@ -6,6 +6,9 @@
 
 <iframe src="https://player.vimeo.com/video/164663100?color=9CBEF2"  frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
+<p> <a href="https://github.com/mbrav/MultiverseClockwork"> MultiverseClockwork on GitHub</a></p>
+
+
 <h2>Statement</h2>
 
 <p>For this creative coding project I wanted to replicate the animations from the 70’s. This is the time when <em>A Clockwork Orange</em> (1971), a movie based on Anthony Burgess’s novel was filmed. During that time, Computer Graphics (CG) first started to emerge and I wanted to create an animation that would encompass the aspects of early CG within the context of the movie. As if the mix was not enough, I also decided to include a few animations that would envision the theory of multiverses. The multiverse theory concepts in the animations are influenced by Jim Holt’s book called <em>Why Does the World Exist?</em>.</p>
