--- a/pages/poem-maschine.html
+++ b/pages/poem-maschine.html
@@ -5,3 +5,5 @@
 <h3>May 2015</h3>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/R6sTHtLNDPA" frameborder="0" allowfullscreen></iframe>
+
+<p> <a href="https://gist.github.com/mbrav/813788550e25800a9159"> Poem Maschine on GitHub</a></p>
