--- a/pages/utopia-tower.html
+++ b/pages/utopia-tower.html
@@ -6,6 +6,8 @@
 
 <iframe src="https://player.vimeo.com/video/166409996?color=9CBEF2"  frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
+<p> <a href="https://github.com/mbrav/InfrastructuralUtopiaTower"> Infrastructural Utopia Tower on GitHub</a></p>
+
 <h2>Statement</h2>
 
 <p><em>Infrastructural Utopia Tower</em> is an art installation that emphasizes on our modern society’s reliance on infrastructures and automated systems. For a modern human, infrastructure is second nature, it is a manifested symbol of our intellectual and evolutionary superiority among other animals. Without infrastructure, a modern human would think he/she had been placed in the wilderness. Us humans, are existentially dependent on infrastructures. We come to this realization and attempt to apply infrastructures almost everywhere while our technological advances only aid this process.</p>
