--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       </ul>
       <h3>Computer Languages</h3>
       <ul>
-        <li>C++ (Processing, openFrameworks, Arduino)</li>
+        <li>C++ (openFrameworks, Arduino)</li>
         <li>JavaScript, HTML5, and CSS3</li>
         <li>Python</li>
         <li>GLSL</li>
