--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="content">
       <p>Hi, I’m Michael 👋🏼</p>
 
-      <p>I’m a BFA Design &amp; Technology student at Parsons School of design. I focus in finding new, creative, and unique ways of combining design with technology. The terms that might define my area of focus are <em>creative technology</em>, <em>installation art</em>, <em>interaction design</em> and <em>ethical design</em>. </p>
+      <p>I’m a BFA Design &amp; Technology student at Parsons School of design. I focus in finding new, creative, and unique ways of combining design with technology. The terms that might define my area of focus are <em>creative technology</em>, <em>installation art</em>, <em>interaction design</em> and <em>interdisciplinary design</em>. </p>
 
       <p>My experiences range from creative/experimental web projects (including this site), to art installations built on the Arduino and Raspberry Pi platforms. My other skills include creative coding using openFrameworks and Processing libraries, sound effect &amp; music production, 3d animation, photography and video editing.</p>
 
@@ -150,9 +150,10 @@
       </ul>
       <h2>Interests and Influences</h2>
       <ul>
-        <li>Earth's Condition, Human Condtion, and the Anthropocene</li>
         <li>History of Mankind, Earth, and Universe</li>
-        <li>Sceptic, Pragmatic, and Utilitarian Philosophy</li>
+        <li>Earth's Condition, Human Condtion, and various Interdisciplinary subjects</li>
+        <li>The natrual enviorement, biology and agricultural practices</li>
+        <li>Design based on Empirical, Ethical, and Utilitarian modes of thinking</li>
         <li>Reinforecement/Machine Learning & Neural Networks</li>
         <li>Modular/Analog Sound Synthesis</li>
         <li>Photography</li>
