--- a/index.html
+++ b/index.html
@@ -70,9 +70,10 @@
       Artificial Intellect Box (2015)
     </div>
     <div class="content">
+
       <p>Hi, I’m Michael 👋🏼</p>
 
-      <p>I’m a BFA Design &amp; Technology student at Parsons School of design. I focus in finding new, creative, and unique ways of combining design with technology. The terms that might define my area of focus are <em>creative technology</em>, <em>installation art</em>, <em>interaction design</em> and <em>interdisciplinary design</em>. </p>
+      <p>I’m a BFA Design &amp; Technology student at Parsons School of design. I focus in finding new, creative, and unique ways of combining design with technology. The terms that might define my area of focus are <em>creative technology</em>, <em>installation art</em>, <em>interaction design</em> and <em>ethical design</em>. </p>
 
       <p>My experiences range from creative/experimental web projects (including this site), to art installations built on the Arduino and Raspberry Pi platforms. My other skills include creative coding using openFrameworks and Processing libraries, sound effect &amp; music production, 3d animation, photography and video editing.</p>
 
@@ -86,7 +87,7 @@
   <!-- PROJECTS PAGE  -->
   <main id="projects">
     <div class="content">
-      <h1>Projects</h1>
+      <h1><span> /</span>projects</h1>
       <div id="project-grid" class="tile-grid">
         <!-- PROJECTS ARE GENERATED HERE  -->
       </div>
@@ -96,7 +97,7 @@
   <!-- Gallery PAGE  -->
   <main id="gallery">
     <div class="content">
-      <h1>Media Gallery</h1>
+      <h1><span> /</span>gallery</h1>
       <p>For more Photos please see my <a href="https://flickr.com/mixania">Flickr Photostream</a></p>
       <div id="gallery-grid" class="tile-grid">
         <!-- GALLERY ITEMS WILL BE GENERATED HERE  -->
@@ -107,7 +108,7 @@
   <!-- RESUME PAGE  -->
   <main id="resume">
     <div class="content">
-      <h1>Resumé</h1>
+      <h1><span> /</span>resumé</h1>
       <p><i><b>Creative Technology, Physical Computing, and Installation Art</b></i></p>
 
       <h2>Education</h2>
@@ -152,7 +153,8 @@
       <ul>
         <li>History of Mankind, Earth, and Universe</li>
         <li>Earth's Condition, Human Condtion, and various Interdisciplinary subjects</li>
-        <li>The natrual enviorement, biology and agricultural practices</li>
+        <li>The natrual enviorement, biology
+          and agricultural practices</li>
         <li>Design based on Empirical, Ethical, and Utilitarian modes of thinking</li>
         <li>Reinforecement/Machine Learning & Neural Networks</li>
         <li>Modular/Analog Sound Synthesis</li>
@@ -182,7 +184,7 @@
   <!-- CONTACT PAGE -->
   <main id="contact">
     <div class="content">
-      <h1>Contact</h1>
+      <h1><span> /</span>contact</h1>
       <p>You have become aquainted with my digital identity, now become aquainted with actual me...</p>
       <h3>Ways to Contact Me</h3>
       <b>Email:</b> <a
