--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
       <p>Hi, I’m Michael 👋🏼</p>
 
-      <p>I’m a BFA Design &amp; Technology student at Parsons School of design. I focus in finding new, creative, and unique ways of combining design with technology. The terms that might define my area of focus are <em>creative technology</em>, <em>installation art</em>, <em>interaction design</em> and <em>ethical design</em>. </p>
+      <p>I’m a BFA Design &amp; Technology student at Parsons School of design. I focus in finding new, creative, and unique ways of combining design with technology. The terms that might define my area of focus are <em>creative technology</em>, <em>installation art</em>, <em>interaction design</em> and <em>interdisciplinary design</em>. </p>
 
       <p>My experiences range from creative/experimental web projects (including this site), to art installations built on the Arduino and Raspberry Pi platforms. My other skills include creative coding using openFrameworks and Processing libraries, sound effect &amp; music production, 3d animation, photography and video editing.</p>
 
@@ -109,7 +109,7 @@
   <main id="resume">
     <div class="content">
       <h1><span> /</span>resumé</h1>
-      <p><i><b>Creative Technology, Physical Computing, and Installation Art</b></i></p>
+      <p><i><b>Creative Technology, Physical Computing, Interdisciplinary Design, and Installation Art</b></i></p>
 
       <h2>Education</h2>
       <p>
