--- a/code/shaders/02/index.html
+++ b/code/shaders/02/index.html
@@ -33,6 +33,7 @@
 
       void main(){
           vec2 st = gl_FragCoord.xy/u_resolution.xy;
+          st.x *= u_resolution.x/u_resolution.y;
           vec3 color = vec3(0.0);
 
           vec2 pos = vec2(0.5)-st;
