--- a/code/shaders/03/index.html
+++ b/code/shaders/03/index.html
@@ -33,6 +33,7 @@
 
       void main(){
           vec2 st = gl_FragCoord.xy/u_resolution.xy;
+          st.x *= u_resolution.x/u_resolution.y;
           st *= 40.0;
           st = fract(st); // Wrap
           vec3 color = vec3(0.0);
