--- a/index.html
+++ b/index.html
@@ -88,8 +88,9 @@
   <main id="projects">
     <div class="content">
       <h1><span> /</span>projects</h1>
+      <!-- PROJECT ITEMS WILL BE GENERATED HERE  -->
       <div id="project-grid" class="tile-grid">
-        <!-- PROJECTS ARE GENERATED HERE  -->
+        <div class="grid-sizer"></div>
       </div>
     </div>
   </main>
@@ -101,6 +102,9 @@
       <p>For more Photos please see my <a href="https://flickr.com/mixania">Flickr Photostream</a></p>
       <div id="gallery-grid" class="tile-grid">
         <!-- GALLERY ITEMS WILL BE GENERATED HERE  -->
+        <div id="project-grid" class="tile-grid">
+          <div class="grid-sizer"></div>
+        </div>
       </div>
     </div>
   </main>
