--- a/pages/data-poetics.html
+++ b/pages/data-poetics.html
@@ -1,6 +1,6 @@
 <h1>Data Poetics</h1>
 
-<h3>Creative Computer Code</h3>
+<h3>Creative Coding in JavaScript</h3>
 
 <h3>January - February 2016</h3>
 
