--- a/pages/inform.html
+++ b/pages/inform.html
@@ -1,22 +1,15 @@
-<h1>infORM alpha</h1>
+<h1>infORM</h1>
 
-<h3>Physical Computing Tool</h3>
+<h3>Physical Mapping Tool</h3>
 
-<h3>March 2015</h3>
+<h3>March 2016</h3>
 
-<p>This project is an attempt to explore certain fields in
-technology that remain uninfluenced in non-technical
-applications. One of these technologies that would defend
-the argument is Object Relational Mapping (ORM) which is
-a field in the sphere of technology that lacks an initiative
-for innovation. It’s effectivity has proven to not be
-significant due to the non-substantial ways of its
-application. The project will explore wether the reason for
-ORM’ ineffective applications are the principles based on
-which its data relations are drawn. The relation between
-data will be created with the help of a physical computing
-device that will gather data from the physical environment
-and visualize it using a technology based medium.</p>
+<iframe src="https://player.vimeo.com/video/161095259?color=9CBEF2"  frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
-<p> <a href="https://github.com/mbrav/infORM/raw/master/ProjectIntent.pdf"> Research Paper (PDF)</a></p>
-<p> <a href="https://github.com/mbrav/infORM">infORM on GitHub</a></p>
+<p><a href="https://github.com/mbrav/infORM/raw/master/ProjectIntent.pdf">Conference Format Paper (PDF)</a></p>
+
+<p><a href="https://github.com/mbrav/infORM">infORM on GitHub</a></p>
+
+<h2>Statement</h2>
+
+<p>This project is a research initiative that achieved a minimalistic proof of concept and provided a roadmap for possible further development. <em>infORM</em> is based on Object Oriented Mapping (ORM) of sensory data and translating that into a conveyable form of information about physical occurrences and events. The project emphasized on the possibility that every event within the space and time dimension, can be mapped, related, and compared. The implication behind such a capability, is that it is feasibly possible to create a new form of an augmented reality based on the analysis of sensory data.</p>
