hide gallery, list projects by priority

--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
 </head>
 <body>
   <!--
+  - HEY!! STOP!!
+
+  - why are you lurking here?
+
+  - you know this is the under bridge euquivalent for a website, right?
+
+  - only sketchy people hang around here.
+
+  - just kidding, if you are looking for this site's source code, might as well look here:
+  https://github.com/mbrav/mbrav.github.io
+
   CODE ATTRIBUTIONS & INFLUENCES:
 
   Bryan Ma
@@ -47,7 +58,7 @@
     <ul>
       <li class="page-link" id="about-link"><a href="#about">About</a></li>
       <li class="page-link" id="projects-link"><a href="#projects">Projects </a><span id="return-to-projecs"></span></li>
-      <li class="page-link" id="gallery-link"><a href="#gallery">Gallery</a></li>
+      <!-- <li class="page-link" id="gallery-link"><a href="#gallery">Gallery</a></li> -->
       <li class="page-link" id="resume-link"><a href="#resume">Resumé</a></li>
       <li class="page-link" id="contact-link"><a href="#contact">Contact</a></li>
       <li class="page-link" id="blog-link"><a href="http://blog.mbrav.com">Blog</a></li>
@@ -73,7 +84,7 @@
 
       <p>Hi, I’m Michael 👋🏼</p>
 
-      <p>I’m a BFA Design &amp; Technology student at Parsons School of design. I focus in finding new, creative, and unique ways of combining design with technology. The terms that might define my area of focus are <em>creative technology</em>, <em>installation art</em>, <em>interaction design</em> and <em>interdisciplinary design</em>. </p>
+      <p>I’m a BFA Design &amp; Technology student at Parsons School of Design. I focus in finding new, creative, and unique ways of combining design with technology. The terms that might define my area of focus are <em>creative technology</em>, <em>installation art</em>, <em>interaction design</em> and <em>interdisciplinary design</em>. </p>
 
       <p>My experiences range from creative/experimental web projects (including this site), to art installations built on the Arduino and Raspberry Pi platforms. My other skills include creative coding using openFrameworks and Processing libraries, sound effect &amp; music production, 3d animation, photography and video editing.</p>
 
