--- a/pages/endevour.html
+++ b/pages/endevour.html
@@ -8,7 +8,7 @@
 
 <p> <a href="https://github.com/mbrav/EndeavoursGuide"> Endeavour's Guide on GitHub</a></p>
 
-<h2>Statement</h2>
+<h2>Description</h2>
 
 <p>The intention behind this project is to revive James Cook’s geographic discoveries that where made while he was the captain of the <em>Endeavour</em> ship. The device is capable of displaying the direction it is directed through 4 different modes and displays its functionality on three 7 segment displays.</p>
 
