--- a/pages/inform.html
+++ b/pages/inform.html
@@ -10,6 +10,6 @@
 
 <p><a href="https://github.com/mbrav/infORM">infORM on GitHub</a></p>
 
-<h2>Statement</h2>
+<h2>Description</h2>
 
 <p>This project is a research initiative that achieved a minimalistic proof of concept and provided a roadmap for possible further development. <em>infORM</em> is based on Object Oriented Mapping (ORM) of sensory data and translating that into a conveyable form of information about physical occurrences and events. The project emphasized on the possibility that every event within the space and time dimension, can be mapped, related, and compared. The implication behind such a capability, is that it is feasibly possible to create a new form of an augmented reality based on the analysis of sensory data.</p>
