--- a/code/shaders/06/index.html
+++ b/code/shaders/06/index.html
@@ -32,34 +32,39 @@
     precision mediump float;
     #endif
 
-    uniform vec2 u_resolution;
-    uniform vec2 u_mouse;
-    uniform float u_time;
+    // Warped Hex
+// By: Brandon Fogerty
+// xdpixel.com
 
-    float random (vec2 st) {
-        return fract(sin(dot(st.xy,
-                             vec2(-0.09)))* 1.1+(u_time/10.));
-    }
+#ifdef GL_ES
+precision mediump float;
+#endif
 
-    void main() {
+#extension GL_OES_standard_derivatives : enable
 
-        vec2 st = floor(gl_FragCoord.xy/u_resolution.xy * 200.);
-        st.x *= u_resolution.x/u_resolution.y;
+uniform float u_time;
+uniform vec2 u_resolution;
 
-        // st *= 10.0;
-        // st = fract(st);
+float c( vec2 p ) {
+	//p.y += mod( floor(p.x), 4.0) * 0.5;
+	//p = abs( fract(p)- 0.5 );
+	//return 1.-abs( max(p.x*1.5 + p.y, p.y * 20.0) - 1.0 )*1. ;
+	return (length(fract(p)-.5)-.4)*4.3;
+}
 
-        float rnd = random( st );
-        vec3 rnd2 = vec3(random( cos(st)), random(st), random(st));
-
-        gl_FragColor = vec4(vec3(rnd2),10.0);
-    }
+void main( void ) {
+	vec2 uv = ( gl_FragCoord.xy / u_resolution.xy ) * 2.0 - 1.0;
+	uv.x *= u_resolution.x / u_resolution.y;
+	uv/=dot(uv/2.,uv);
+	uv.x+=u_time*0.005;uv.y+=u_time*0.01;
+	gl_FragColor = vec4( vec3(c(uv * sin(u_time/20.0)), c(uv * sin(u_time/10.0)), c(uv * cos(u_time/10.0))), 1.0 );
+}
 
 </script>
 <script src="../setup.js" type="text/javascript"></script>
 <script type="text/javascript">
       // set project's number and name
-      projectSetup(5,"Singularity");
+      projectSetup(6,"Force Field");
 </script>
 </body>
 </html>
