--- a/code/shaders/07/index.html
+++ b/code/shaders/07/index.html
@@ -28,38 +28,32 @@
 
     <script id="fragmentShader" type="x-shader/x-fragment">
 
-    #ifdef GL_ES
-    precision mediump float;
-    #endif
-
     uniform vec2 u_resolution;
     uniform vec2 u_mouse;
     uniform float u_time;
 
     float random (vec2 st) {
         return fract(sin(dot(st.xy,
-                             vec2(-0.09)))* 1.1+(u_time/10.));
+                             vec2(0.09,-0.2)))* 10.0+ (u_time/40.) 
     }
 
     void main() {
 
-        vec2 st = floor(gl_FragCoord.xy/u_resolution.xy * 200.);
+        vec2 st = floor(gl_FragCoord.xy/u_resolution.xy * 300.);
         st.x *= u_resolution.x/u_resolution.y;
 
-        // st *= 10.0;
-        // st = fract(st);
 
         float rnd = random( st );
-        vec3 rnd2 = vec3(random( cos(st)), random(st), random(st));
+        vec3 rnd2 = vec3(random( st - 0.06), random( st + 0.06), random( st ));
 
-        gl_FragColor = vec4(vec3(rnd2),10.0);
+        gl_FragColor = vec4(vec3(floor(rnd2*4.)),1.);
     }
 
 </script>
 <script src="../setup.js" type="text/javascript"></script>
 <script type="text/javascript">
       // set project's number and name
-      projectSetup(5,"Singularity");
+      projectSetup(7,"Random Aesthetics");
 </script>
 </body>
 </html>
