--- a/pages/personality-box.html
+++ b/pages/personality-box.html
@@ -1,6 +1,6 @@
 <h1>Artificial Personality Box</h1>
 
-<h3>Installation Piece</h3>
+<h3>Physical Installation / Narrative</h3>
 
 <h3>May 2015</h3>
 
