--- a/pages/stardust-composer.html
+++ b/pages/stardust-composer.html
@@ -8,7 +8,7 @@
 
 <p> <a href="https://github.com/mbrav/StardustComposer"> Stardust Composer on GitHub</a></p>
 
-<h2>Statement</h2>
+<h2>Description</h2>
 
 <p><em>Stardust Music Composer</em> is an experiment that emphasizes on interactivity and visualization and combining it with music composition. Current Digital Audio Workstation (DAW) software used for music production by professionals, does not incorporate any aspects of interaction outside of the technical realm. This experimental project seeks to add a visual element to the music production process and combine it with an interactive aspect.</p>
 
