--- a/index.html
+++ b/index.html
@@ -124,75 +124,73 @@
   <main id="resume">
     <div class="content">
       <h1><span> /</span>resumé</h1>
-      <p><i><b>Creative Technology, Physical Computing, Interdisciplinary Design, and Installation Art</b></i></p>
+        <p><em><strong>Creative Technology, Physical Computing, Interdisciplinary Design, and Installation Art</strong></em></p>
 
-      <h2>Education</h2>
-      <p>
-        <a href="http://www.newschool.edu/parsons/">Parsons School of Design</a> New York, NY
-        <br>
-        BFA in <b>Design and Technology</b>
-        <br>
-        Class of May 2018
-      </p>
-      <p>
-        <a href="http://www.newschool.edu/lang/ ">Eugene Lang</a> New York, NY
-        <br>
-        BFA in <b>Philosophy and Anthropology</b>
-        <br>
-        Class of May 2019
-      </p>
-      <p>
-        <a href="http://www.oxfordacademy.net/">Oxford Academy</a> Westbrook, CT
-        <br>
-        High School, 2012 - 2014
-      </p>
-      <h2>Experience</h2>
-      <p>
-        <strong>Parsons School of Design</strong>. New York, NY.
-        <br>
-        <em>Peer Mentor</em>, March 2016 - present
-      </p>
+        <h2>Education</h2>
 
-      <h2>Skills</h2>
-      <ul>
-        <li>Creative Coding (Processing, Open Frameworks, GLSL, etc.) </li>
-        <li>Arduino, Raspberry Pi and Internet of Things </li>
-        <li>Web Technologies (CSS3 & HTML5, JavaScript, node.js)</li>
-        <li>Music and Sound Production (Logic Pro X) </li>
-        <li>3D Modelling and Animation (Blender, Rhino) </li>
-        <li>Analog and Digital Photogrpahy ( Lightroom, Adobe Photoshop) </li>
-        <li>Video Editing (Adobe Premier Pro) </li>
+        <p><a href="http://www.newschool.edu/parsons/">Parsons School of Design</a> New York, NY<br/>
+        BFA in <strong>Design and Technology</strong><br/>
+        Class of May 2018</p>
+
+        <p><a href="http://www.newschool.edu/lang/">Eugene Lang</a> New York, NY<br/>
+        BFA in <strong>Philosophy and Anthropology</strong><br/>
+        Class of May 2019</p>
+
+        <p><a href="http://www.oxfordacademy.net/">Oxford Academy</a> Westbrook, CT<br/>
+        High School, 2012 - 2014</p>
+
+        <h2>Experience</h2>
+
+        <p><strong>Parsons School of Design</strong>. New York, NY.<br/>
+        <em>Peer Mentor</em>, March 2016 - present</p>
+        
+        <h2>Skills</h2>
+
+        <ul>
+        <li>Creative Coding (Processing, Open Frameworks, GLSL, etc.)</li>
+        <li>Arduino, Raspberry Pi and Internet of Things</li>
+        <li>Web Technologies (CSS3 &amp; HTML5, JavaScript, node.js)</li>
+        <li>Music and Sound Production (Logic Pro X)</li>
+        <li>3D Modelling and Animation (Blender, Rhino)</li>
+        <li>Analog and Digital Photography ( Lightroom, Adobe Photoshop)</li>
+        <li>Video Editing (Adobe Premier Pro)</li>
         <li>Operating an espresso machine</li>
-      </ul>
-      <h2>Interests and Influences</h2>
-      <ul>
+        </ul>
+
+        <h2>Interests and Influences</h2>
+
+        <ul>
         <li>History of Mankind, Earth, and Universe</li>
-        <li>Earth's Condition, Human Condtion, and various Interdisciplinary subjects</li>
-        <li>The natrual enviorement, biology
-          and agricultural practices</li>
+        <li>Earth&#8217;s Condition, Human Condition, and various Interdisciplinary subjects</li>
+        <li>The natural environment, biology and agricultural practices</li>
         <li>Design based on Empirical, Ethical, and Utilitarian modes of thinking</li>
-        <li>Reinforecement/Machine Learning & Neural Networks</li>
+        <li>Reinforcement/Machine Learning &amp; Neural Networks</li>
         <li>Modular/Analog Sound Synthesis</li>
         <li>Photography</li>
         <li>Typography</li>
         <li>Yoga</li>
-      </ul>
-      <h2>Languages</h2>
-      <h3>Human Languages</h3>
-      <ul>
+        </ul>
+
+        <h2>Languages</h2>
+
+        <h3>Human Languages</h3>
+
+        <ul>
         <li>English (fluent)</li>
         <li>Russian (fluent)</li>
         <li>Italian (advanced/fluent)</li>
-      </ul>
-      <h3>Computer Languages</h3>
-      <ul>
+        </ul>
+
+        <h3>Computer Languages</h3>
+
+        <ul>
         <li>C++ (openFrameworks, Arduino)</li>
         <li>JavaScript, HTML5, and CSS3</li>
         <li>Python</li>
         <li>GLSL</li>
         <li>Turbo Pascal (1st)</li>
         <li>R</li>
-      </ul>
+        </ul>
     </div>
   </main>
 
