--- a/code/shaders/07/index.html
+++ b/code/shaders/07/index.html
@@ -32,28 +32,42 @@
     uniform vec2 u_mouse;
     uniform float u_time;
 
-    float random (vec2 st) {
-        return fract(sin(dot(st.xy,
-                             vec2(0.09,-0.2)))* 10.0+ (u_time/40.) 
-    }
-
-    void main() {
-
-        vec2 st = floor(gl_FragCoord.xy/u_resolution.xy * 300.);
+    void main(){
+        vec2 st = gl_FragCoord.xy/u_resolution.xy;
         st.x *= u_resolution.x/u_resolution.y;
+        float scale = 10.;
+        st *= scale;
+        st.x += u_time*0.3;
+        // st *= cos(u_time);
+        st = sin(st/0.5)-0.3;
+        st = fract(st); // Wrap
 
+        vec3 color = vec3(0.399,0.542,1.000);
 
-        float rnd = random( st );
-        vec3 rnd2 = vec3(random( st - 0.06), random( st + 0.06), random( st ));
+        vec2 pos = vec2(0.5)-st;
 
-        gl_FragColor = vec4(vec3(floor(rnd2*4.)),1.);
+        float r = length(pos)*2.0;
+        float a = atan(pos.y,pos.x);
+
+        float f = sin(a*2.+u_time*2.);
+        // f = abs(cos(a*2.));
+        // f = abs(cos(a*2.5))*.5+.3;
+        // f = abs(cos(a*12.)*sin(a*3.))*.8+.1;
+        // f = smoothstep(-.5,1., cos(a*10.))*0.2+0.5;
+
+        vec3 c = vec3( step(f,r));
+        c = vec3( color - step(f+-0.5,r));
+        c = vec3( color / step(f+-0.5,r));
+
+        gl_FragColor = vec4(c, 1.0);
     }
+
 
 </script>
 <script src="../setup.js" type="text/javascript"></script>
 <script type="text/javascript">
       // set project's number and name
-      projectSetup(7,"Random Aesthetics");
+      projectSetup(7,"Interconection");
 </script>
 </body>
 </html>
