--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <!--
   - HEY!! STOP!!
 
-  - why are you lurking here?
+  - why are you lurking around here?
 
   - you know this is the under bridge euquivalent for a website, right?
 
@@ -143,7 +143,7 @@
 
         <p><strong>Parsons School of Design</strong>. New York, NY.<br/>
         <em>Peer Mentor</em>, March 2016 - present</p>
-        
+
         <h2>Skills</h2>
 
         <ul>
@@ -235,12 +235,14 @@
 <script src="https://npmcdn.com/masonry-layout/dist/masonry.pkgd.min.js" type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/TweenMax.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/plugins/CSSPlugin.min.js"></script>
+<!-- <script src="http://malsup.github.com/jquery.cycle2.js"></script> -->
 
 <!-- load scripts locally if script did not load -->
 <script>window.jQuery || document.write('<script src="src/lib/jquery-3.0.0-rc1.min.js" type="text/javascript"><\/script>')</script>
 <script>window.Masonry || document.write('<script src="src/lib/masonry.pkgd.min.js" type="text/javascript"><\/script>')</script>
 <script>window.TweenMax || document.write('<script src="src/lib/GSAP/TweenMax.min.js" type="text/javascript"><\/script>')</script>
 <script>window.CSSPlugin || document.write('<script src="src/lib/GSAP/plugins/CSSPlugin.min.js" type="text/javascript"><\/script>')</script>
+<!-- <script>window.cycle || document.write('<script src="src/lib/cycle2.js" type="text/javascript"><\/script>')</script> -->
 
 <script src="src/script.js" type="text/javascript"></script>
 </html>
