--- a/index.html
+++ b/index.html
@@ -199,31 +199,32 @@
     <div class="content">
       <h1><span> /</span>contact</h1>
       <p>You have become aquainted with my digital identity, now become aquainted with actual me...</p>
-      <h3>Ways to Contact Me</h3>
+      <img src="src/contact.jpg" alt="" width="200px"/>
+      <h2>Ways to Contact Me</h2>
       <p>
-        <b>Email:</b> <a
+        Email: <a
         href="mailto:mbrav@protonmail.com?body=Big%20brother%20is%20watching%20you%0D%0A-%20George%20Orwell">mbrav@protonmail.com</a>
         <br>
-        <b>GPG:</b> <a id="gpg" href="src/gpg-key.txt">7439 BE5C C296 74B5 BB9B 3EAC 31BC <span> DCD8 537D 2CF1</span></a>
+        GPG: <a id="gpg" href="src/gpg-key.txt">7439 BE5C C296 74B5 BB9B 3EAC 31BC <span> DCD8 537D 2CF1</span></a>
         <br>
-        <b>Telegram:</b> <a href="https://telegram.me/mbrav">@mbrav</a>
+        Telegram: <a href="https://telegram.me/mbrav">@mbrav</a>
         <br>
-        <b>Twitter:</b> <a href="https://twitter.com/mixania">@mixania</a>
+        Twitter: <a href="https://twitter.com/mixania">@mixania</a>
         <br>
       </p>
-      <h3>My other Digital Extensions</h3>
+      <h2>My other Digital Extensions</h2>
       <p>
-        <b>GitHub:</b> <a href="https://github.com/mbrav">@mbrav</a>
+        GitHub: <a href="https://github.com/mbrav">@mbrav</a>
         <br>
-        <b>Medium:</b> <a href="https://medium.com/@mbrav">@mbrav</a>
+        Medium: <a href="https://medium.com/@mbrav">@mbrav</a>
         <br>
-        <b>Vimeo:</b> <a href="https://vimeo.com/mbrav">@mbrav</a>
+        Vimeo: <a href="https://vimeo.com/mbrav">@mbrav</a>
         <br>
-        <b>Instagram:</b> <a href="https://instagram.com/mbrav_">@mbrav_</a>
+        Instagram: <a href="https://instagram.com/mbrav_">@mbrav_</a>
         <br>
-        <b>Flickr:</b> <a href="https://flickr.com/mixania">@mixania</a>
+        Flickr: <a href="https://flickr.com/mixania">@mixania</a>
         <br>
-        <b>Soundcloud</b> <a href="https://soundcloud.com/mixania">@mixania</a>
+        Soundcloud <a href="https://soundcloud.com/mixania">@mixania</a>
       <p>
     </div>
   </main>
