--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
       Artificial Intellect Box (2015)
     </div>
     <div class="content">
+      <p><img src="src/img/portrait.jpg" id="portrait" alt=""/> Hi, I’m Michael 👋🏼</p>
 
-      <p>Hi, I’m Michael 👋🏼</p>
 
       <p>I’m a BFA Design &amp; Technology student at Parsons School of Design. I focus in finding new, creative, and unique ways of combining design with technology. The terms that might define my area of focus are <em>creative technology</em>, <em>installation art</em>, <em>interaction design</em> and <em>interdisciplinary design</em>. </p>
 
@@ -199,7 +199,7 @@
     <div class="content">
       <h1><span> /</span>contact</h1>
       <p>You have become aquainted with my digital identity, now become aquainted with actual me...</p>
-      <img src="src/contact.jpg" alt="" width="200px"/>
+      <img src="src/img/contact.jpg" alt="" width="200px"/>
       <h2>Ways to Contact Me</h2>
       <p>
         Email: <a
