--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       Artificial Intellect Box (2015)
     </div>
     <div class="content">
-      <p><img src="src/img/portrait.jpg" id="portrait" alt=""/> Hi, I’m Michael 👋🏼</p>
+      <p><img src="src/img/head.jpg" id="portrait" alt=""/> Hi, I’m Michael 👋🏼</p>
 
 
       <p>I’m a BFA Design &amp; Technology student at Parsons School of Design. I focus in finding new, creative, and unique ways of combining design with technology. The terms that might define my area of focus are <em>creative technology</em>, <em>installation art</em>, <em>interaction design</em> and <em>interdisciplinary design</em>. </p>
