Added link to studies page

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
       <!-- <li class="page-link" id="gallery-link"><a href="#gallery">Gallery</a></li> -->
       <li class="page-link" id="resume-link"><a href="#resume">Resumé</a></li>
       <li class="page-link" id="contact-link"><a href="#contact">Contact</a></li>
+      <li class="page-link" id="blog-link"><a href="http://mbrav.com/studies/">Studies</a></li>
       <li class="page-link" id="blog-link"><a href="http://blog.mbrav.com">Blog</a></li>
     </ul>
   </nav>
