nouva media art

--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
     <div class="content">
       <p><img src="src/img/head.jpg" id="portrait" alt=""/> Hi, I’m Michael 👋🏼</p>
 
-
-      <p>I’m a BFA Design &amp; Technology student at Parsons School of Design. I focus in finding new, creative, and unique ways of combining design with technology. The terms that might define my area of focus are <em>creative technology</em>, <em>installation art</em>, <em>interaction design</em> and <em>interdisciplinary design</em>. </p>
+      <p>I’m a BFA Design &amp; Technology student at Parsons School of Design. I focus in finding new, creative, and unique ways of combining design with technology. The terms that might define my area of focus are <em>creative technology</em>, <em>new media art</em>, <em>interaction design</em> and <em>interdisciplinary design</em>. </p>
 
       <p>My experiences range from creative/experimental web projects (including this site), to art installations built on the Arduino and Raspberry Pi platforms. My other skills include creative coding using openFrameworks and Processing libraries, sound effect &amp; music production, 3d animation, photography and video editing.</p>
 
