Edited about, and utopia tower page

--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
     <div class="content">
       <p><img src="src/img/head.jpg" id="portrait" alt=""/> Hi, I’m Michael 👋🏼</p>
 
-      <p>I’m a BFA Design &amp; Technology student at Parsons School of Design. I focus in finding new, creative, and unique ways of combining design with technology. The terms that might define my area of focus are <em>creative technology</em>, <em>new media art</em>, <em>interaction design</em> and <em>interdisciplinary design</em>. </p>
+      <p>I’m a BFA Design &amp; Technology student at Parsons School of Design. I focus in finding aesthetic and functional ways of combining design with technology. The terms that define my area of focus are <em>creative technology</em>, <em>new media art</em>, <em>interaction design</em> and <em>interdisciplinary design</em>. </p>
 
-      <p>My experiences range from creative/experimental web projects (including this site), to art installations built on the Arduino and Raspberry Pi platforms. My other skills include creative coding using openFrameworks and Processing libraries, sound effect &amp; music production, 3d animation, photography and video editing.</p>
+      <p>My experiences range from creative/experimental web projects (including this site), to new media art installations built using the Arduino and Raspberry Pi platforms. My other skills include creative coding using JavaScript, openFrameworks and Processing libraries, sound effect &amp; music production, 3d animation, photography and video editing.</p>
 
-      <p>In parallel with studying Design &amp; Technology at Parsons, I am also pursuing a secondary major in Philosophy and Media at Eugene Lang College. My interest in these studies is to examine technology as an existential extension of the modern human being. I seek to investigate the human condition at a time of morphing environments and evolving technologies. It is a path that I am striving to combine with my primary major.</p>
+      <p>In parallel with studying Design &amp; Technology at Parsons, I am also pursuing a secondary major in Philosophy and Media at Eugene Lang College. My interest in these studies is to examine technology as an existential extension of the modern human being. I seek to investigate the human condition at a time of morphing environments, evolving technologies, and the incubation of eccentric new mediums. It is a path that I am striving to explore and combine with my primary major.</p>
 
       <p>My area of focus is experimental for the most part. I’m actively pursuing opportunities that would allow me to extend my specialization. I am happy to collaborate in projects and installations that focus on activism, social awareness, and all kinds of other subjects that regard technology and its environments. 💻🌎</p>
 
