--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@
       <h2>Ways to Contact Me</h2>
       <p>
         Email: <a
-        href="mailto:mbrav@protonmail.com?body=Big%20brother%20is%20watching%20you%0D%0A-%20George%20Orwell">mbrav@protonmail.com</a>
+        href="mailto:mbrav@protonmail.com?body=Big%20brother%20is%20watching%20you%0D%0A-%20George%20Orwell">bravm321@newschool.edu</a>
         <br>
-        GPG: <a id="gpg" href="src/gpg-key.txt">7439 BE5C C296 74B5 BB9B 3EAC 31BC <span> DCD8 537D 2CF1</span></a>
-        <br>
+        <!-- GPG: <a id="gpg" href="src/gpg-key.txt">7439 BE5C C296 74B5 BB9B 3EAC 31BC <span> DCD8 537D 2CF1</span></a>
+        <br> -->
         Telegram: <a href="https://telegram.me/mbrav">@mbrav</a>
         <br>
         Twitter: <a href="https://twitter.com/mixania">@mixania</a>
