--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
       <!-- <p><del>My area of focus is experimental for the most part. I’m actively pursuing opportunities that would allow me to extend my specialization. I am happy to collaborate in projects and installations that focus on activism, social awareness, and all kinds of other subjects that regard technology and its environments. 💻🌎</del></p> -->
 
-      <p><strong>Updates and Work in Progress:</strong></p>
+      <h3>Updates and Work in Progress</h3>
 
       <ul>
       <li><a href="/Lab-FA16/02/index.html">Sleep Harmonics</a> - A project that explores the harmonies and poetics behind personal data through sound synthesis and visualization. Developed in a web gallery medium.</li>
