--- a/code/shaders/07/index.html
+++ b/code/shaders/07/index.html
@@ -67,7 +67,7 @@
 <script src="../setup.js" type="text/javascript"></script>
 <script type="text/javascript">
       // set project's number and name
-      projectSetup(7,"Interconection");
+      projectSetup(7,"Continuum");
 </script>
 </body>
 </html>
