--- a/code/shaders/08/index.html
+++ b/code/shaders/08/index.html
@@ -33,7 +33,7 @@
 <script src="../setup.js" type="text/javascript"></script>
 <script type="text/javascript">
       // set project's number and name
-      projectSetup(8  ,"Quantum States");
+      projectSetup(8  ,"> title goes here <");
 </script>
 </body>
 </html>
