--- a/index.html
+++ b/index.html
@@ -239,13 +239,13 @@
 <!-- load script from source -->
 <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 <script src="https://npmcdn.com/masonry-layout/dist/masonry.pkgd.min.js" type="text/javascript"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/TweenMax.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/plugins/CSSPlugin.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/plugins/CSSPlugin.min.js"></script>
 <!-- <script src="http://malsup.github.com/jquery.cycle2.js"></script> -->
 
 <!-- load scripts locally if script did not load -->
 <script>
-    window.jQuery || document.write('<script src="src/lib/jquery-3.0.0-rc1.min.js" type="text/javascript"><\/script>')
+    window.jQuery || document.write('<script src="src/lib/jquery-3.1.0.min.js" type="text/javascript"><\/script>')
 </script>
 <script>
     window.Masonry || document.write('<script src="src/lib/masonry.pkgd.min.js" type="text/javascript"><\/script>')
