added public work

--- a/index.html
+++ b/index.html
@@ -151,15 +151,20 @@
 
           <h2>Experience</h2>
 
-          <p><strong>Parsons School of Design</strong>. New York, NY.<br/>
-          <em>Peer Mentor</em>, March 2016 - present</p>
+          <p><em>Peer Mentor</em>, March 2016 - present<br/>
+          Parsons School of Design, New York, NY. </p>
+
+          <h2>Exhibitions &amp; Public Works</h2>
+
+          <p><a href="https://www.facebook.com/events/860600520716726">Tangram</a>, May 2016<br/>
+          Parsons School of Design, New York, NY. </p>
 
           <h2>Skills</h2>
 
           <ul>
           <li>Creative Coding (Processing, Open Frameworks, GLSL, etc.)</li>
           <li>Arduino, Raspberry Pi and Internet of Things</li>
-          <li>Web Technologies (CSS3 &amp; HTML5, JavaScript, node.js)</li>
+          <li>Web Technologies (CSS3 &amp; HTML5, JavaScrip, node.js)</li>
           <li>Music and Sound Production (Logic Pro X)</li>
           <li>3D Modelling and Animation (Blender, Rhino)</li>
           <li>Analog and Digital Photography ( Lightroom, Adobe Photoshop)</li>
