resume and styling

--- a/index.html
+++ b/index.html
@@ -158,6 +158,10 @@
           <p><a href="https://www.facebook.com/events/860600520716726">Tangram</a>, May 2016<br/>
           Parsons School of Design, New York, NY. </p>
 
+          <p> <a href="https://www.crunchbase.com/organization/rentity#/entity">Rentity</a> concept design at <a href="https://events.newschool.edu/event/design_and_hack_opening_ceremonies_hackathon">Design and Hack</a>, November 2014 <br/>
+
+          Parsons School of Design. New York, NY. </p>
+
           <h2>Skills</h2>
 
           <ul>
