--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           Class of May 2018</p>
 
           <p><a href="http://www.newschool.edu/lang/">Eugene Lang</a> New York, NY<br/>
-          BFA in <strong>Philosophy and Anthropology</strong><br/>
+          BFA in <strong>Philosophy</strong><br/>
           Class of May 2019</p>
 
           <p><a href="http://www.oxfordacademy.net/">Oxford Academy</a> Westbrook, CT<br/>
@@ -147,17 +147,19 @@
 
           <h2>Experience</h2>
 
-          <p><em>Peer Mentor</em>, March 2016 - present<br/>
-          Parsons School of Design, New York, NY. </p>
+          <p><em>Communications Intern</em> at <a href="http://eyebeam.org/">Eyebeam</a><br/>
+          <b>October 2016 - Present</b>. Brooklyn, NY. </p>
+
+          <p><em>Peer Mentor</em> at <a href="http://www.newschool.edu/parsons/">Parsons School of Design</a><br/>
+          <b>March 2016 - Present</b>. New York, NY. </p>
 
           <h2>Exhibitions &amp; Public Works</h2>
 
-          <p><a href="https://www.facebook.com/events/860600520716726">Tangram</a>, May 2016<br/>
-          Parsons School of Design, New York, NY. </p>
+          <p><a href="https://www.facebook.com/events/860600520716726">Tangram</a><br/>
+          <b>May 2016</b>. New York, NY. </p>
 
-          <p> <a href="https://www.crunchbase.com/organization/rentity#/entity">Rentity</a> concept design at <a href="https://events.newschool.edu/event/design_and_hack_opening_ceremonies_hackathon">Design and Hack</a>, November 2014 <br/>
-
-          Parsons School of Design. New York, NY. </p>
+          <p> <a href="https://www.crunchbase.com/organization/rentity#/entity">Rentity</a> concept design at <a href="https://events.newschool.edu/event/design_and_hack_opening_ceremonies_hackathon">Design and Hack</a><br/>
+          <b>November 2014</b>. New York, NY. </p>
 
           <h2>Skills</h2>
 
@@ -174,10 +176,8 @@
 
           <h2>Interests and Influences</h2>
 
-          <ul>
-          <li>Earth&#8217;s Condition, Human Condition, and a broad range of other subjects</li>
+          <ul>>
           <li>Design based on Empirical, Ethical, Aesthetic, Utilitarian, and Interdisciplinary modes of thinking</li>
-          <li>Reinforcement/Machine Learning &amp; Neural Networks</li>
           <li>Modular/Analog Sound Synthesis</li>
           <li>Photography</li>
           <li>Typography</li>
