--- a/pages/data-abyss.html
+++ b/pages/data-abyss.html
@@ -16,4 +16,4 @@
 
 <h2>Statement</h2>
 
-<p>This project is meditation on our relation with our personal data. If we constantly extract meaning out of our personal data, what do we accomplish as humans? Are we really the ones who extract meaning out of it? Or does someone else do it for us? What is the implication of quantifying ourselves and how does that augment our human nature? If it even does so at all. Perhaps it deteriorates it. Maybe quantifying ourselves through our personal data just makes us less human and materializes our nature.</p>
+<p>This project is a meditation on our relation with our personal data. If we constantly extract meaning out of our personal data, what do we accomplish as humans? Are we really the ones who extract meaning out of it? Or does someone else do it for us? What is the implication of quantifying ourselves and how does that augment our human nature? If it even does so at all. Perhaps it deteriorates it. Maybe quantifying ourselves through personal data just makes us less human and forces us into the realm of the material.</p>
