aditions and corrections

--- a/pages/ice-nine.html
+++ b/pages/ice-nine.html
@@ -53,3 +53,7 @@
 <p><img src="https://c1.staticflickr.com/9/8649/29847494004_a9dce0af9c_c.jpg" alt="" /></p>
 
 <img src="https://c2.staticflickr.com/6/5592/30441770106_86c3887114_c.jpg" alt="" />
+
+<p>Coded with <a href="https://threejs.org/">three.js</a>, a WebGL JavaScript library. </p>
+
+<p><a href="https://github.com/mbrav/Lab-FA16">Ice Nine on GitHub</a> (part of the Lab Class experiments)</p>
