--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           <ul>
           <li>Creative Coding (Processing, Open Frameworks, GLSL, etc.)</li>
           <li>Arduino, Raspberry Pi and Internet of Things</li>
-          <li>Web Technologies (CSS3 &amp; HTML5, JavaScrip, node.js)</li>
+          <li>Web Technologies (CSS3 &amp; HTML5, JavaScript, three.js, node.js, socket.io)</li>
           <li>Music and Sound Production (Logic Pro X)</li>
           <li>3D Modelling and Animation (Blender, Rhino)</li>
           <li>Analog and Digital Photography ( Lightroom, Adobe Photoshop)</li>
@@ -197,12 +197,11 @@
           <h3>Computer Languages</h3>
 
           <ul>
-          <li>C++ (openFrameworks, Arduino)</li>
           <li>JavaScript, HTML5, and CSS3</li>
+          <li>C++ (openFrameworks, Arduino)</li>
           <li>Python</li>
           <li>GLSL</li>
           <li>Turbo Pascal (1st)</li>
-          <li>R</li>
           </ul>
         </div>
     </main>
