--- a/pages/ice-nine.html
+++ b/pages/ice-nine.html
@@ -6,7 +6,7 @@
 
 <h2>The Pre-Ice Condition</h2>
 
-<p><img src="https://c2.staticflickr.com/6/5574/29847493484_9146a017aa_c.jpg" alt="" /></p>
+<img src="https://c2.staticflickr.com/6/5574/29847493484_9146a017aa_c.jpg" alt="" />
 
 <p>In Kurt Vonnegut’s novel <em>Cat’s Cradle</em>, Ice IX (Ice Nine) is a substance that was developed by the Manhattan Project, which is also notoriously known for developing the first atom bomb in complete secrecy during World War II. When the bomb was finally used on Hiroshima and Nagasaki, the world realized (among which where also the scientist who helped to create the bomb) the destructive potential of the atom bomb.</p>
 
@@ -22,9 +22,9 @@
 
 <p><a href="http://www.mbrav.com/Lab-FA16/13/index.html">Web Browser Interaction</a></p>
 
-<p><img src="https://c2.staticflickr.com/6/5623/29847493454_f8c9841c99_c.jpg" alt="" /></p>
+<img src="https://c2.staticflickr.com/6/5623/29847493454_f8c9841c99_c.jpg" alt="" />
 
-<p><img src="https://c2.staticflickr.com/6/5476/29845945283_6058071e42_c.jpg" alt="" /></p>
+<img src="https://c2.staticflickr.com/6/5476/29845945283_6058071e42_c.jpg" alt="" />
 
 <img src="https://c2.staticflickr.com/6/5720/29845945323_8a3029f8a1_c.jpg" alt="" />
 
@@ -32,11 +32,11 @@
 
 <p>This is an abstract representation of the resistance that humans attempt to make in order to stop the spread of Ice Nine. </p>
 
-<p><a href="http://www.mbrav.com/Lab-FA16/14/index.html">Web Browser Interaction</a></p>
+<a href="http://www.mbrav.com/Lab-FA16/14/index.html">Web Browser Interaction</a></p>
 
-<p><img src="https://c2.staticflickr.com/6/5706/30441769776_245fc2f92d_c.jpg" alt="" /></p>
+<img src="https://c2.staticflickr.com/6/5706/30441769776_245fc2f92d_c.jpg" alt="" />
 
-<p><img src="https://c2.staticflickr.com/6/5516/30391706841_441f95e50d_c.jpg" alt="" /></p>
+<img src="https://c2.staticflickr.com/6/5516/30391706841_441f95e50d_c.jpg" alt="" />
 
 <img src="https://c2.staticflickr.com/6/5819/29847493784_7f9b727bf9_c.jpg" alt="" />
 
@@ -46,11 +46,11 @@
 
 <p><a href="http://www.mbrav.com/Lab-FA16/15/index.html">Web Browser Interaction</a></p>
 
-<p><img src="https://c2.staticflickr.com/6/5611/30441769956_5007353033_c.jpg" alt="" /> </p>
+<img src="https://c2.staticflickr.com/6/5611/30441769956_5007353033_c.jpg" alt="" />
 
-<p><img src="https://c2.staticflickr.com/6/5511/30441770026_ec3031fdfc_c.jpg" alt="" /></p>
+<img src="https://c2.staticflickr.com/6/5511/30441770026_ec3031fdfc_c.jpg" alt="" />
 
-<p><img src="https://c1.staticflickr.com/9/8649/29847494004_a9dce0af9c_c.jpg" alt="" /></p>
+<img src="https://c1.staticflickr.com/9/8649/29847494004_a9dce0af9c_c.jpg" alt="" />
 
 <img src="https://c2.staticflickr.com/6/5592/30441770106_86c3887114_c.jpg" alt="" />
 
