--- a/pages/ice-nine.html
+++ b/pages/ice-nine.html
@@ -32,7 +32,7 @@
 
 <p>This is an abstract representation of the resistance that humans attempt to make in order to stop the spread of Ice Nine. </p>
 
-<a href="http://www.mbrav.com/Lab-FA16/14/index.html">Web Browser Interaction</a></p>
+<p><a href="http://www.mbrav.com/Lab-FA16/14/index.html">Web Browser Interaction</a></p>
 
 <img src="https://c2.staticflickr.com/6/5706/30441769776_245fc2f92d_c.jpg" alt="" />
 
