--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="content">
             <p><img src="src/img/head.jpg" id="portrait" alt="" /> Hi, I’m Michael 👋🏼</p>
 
-            <p>I’m a BFA Design &amp; Technology student at Parsons School of Design. I focus in exploring the periphery where design and technology meet — the area where aestheticism and functionalism conflict. The terms that define my area of focus are <em>creative technology</em>, <em>new media art</em>, <em>interaction design</em> and <em>interdisciplinary design</em>. </p>
+            <p>I’m an unreserved tinkerer, an agitated theorizer, and an aspiring generalist. I am currently a BFA Design & Technology student studying at Parsons School of Design. I focus in exploring the periphery where design and technology meet. The terms that define my area of focus are <em>creative technology</em>, <em>new media art</em>, <em>interaction design</em> and <em>interdisciplinary design</em>. </p>
 
             <p>My experiences range from creative/experimental web projects (including this site), to new media art installations built using the Arduino and Raspberry Pi platforms. My other skills include creative coding using JavaScript, openFrameworks and Processing libraries, sound effect &amp; music production, 3d animation, photography and video editing.</p>
 
